--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 		  </div>
 		</div>
 	  </main>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5153317377352506"
+     crossorigin="anonymous"></script>
 	  <script>
 		const form = document.getElementById("student-form");
 		let button = document.getElementById("addBtn");
